# lambda-calc

./: LICENSE  README.md  lambda-calc.cabal  stack.yaml
src/: Main.hs
src/LambdaCalc/: Parser.hs  PrettyPrinter.hs  Simplify.hs  Types.hs
tests/: Test.hs
