name:                lambda-calc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ymherklotz/lambda-calc#readme
license:             BSD3
license-file:        LICENSE
author:              Yann Herklotz
maintainer:          ymherklotz@gmail.com
copyright:           2018 Yann Herklotz
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lambda-calc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       LambdaCalc.Parser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 7.0.0
